Fix line wrapping and useCallback

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ iframe {
 }
 
 .overlay {
-  white-space-collapse: preserve-breaks;
+  white-space: pre-wrap;
   position: fixed;
   border: none;
   right: 0;
